# forest-cover-endpoint

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py  model.py  schemas.py
examples/: spruce_fir.json
infra/: README.md  workbook.json
tests/: test_api.py
train/: train.py
